# cmc-eml

./: .gitignore  CMakeLists.txt  attachment.c  attachment.h  base64.c  base64.h  bigstring.c  bigstring.h  clang-format  comm.c  comm.h  error.c  error.h  feat.h  header.c  header.h  io.c  io.h  main.c  sign.c  sign.h  util.c  util.h
example/clear/: a.txt  body.txt  create.sh  test.txt
example/signed/: create.sh  test.txt  test_signed.txt
